# data-quality-service

./: .gitignore  CLAUDE.md  README.md  bamd_auto.md  docker-compose.yml  pyproject.toml  pytest.ini
_bmad-output/: dev-checklist.md  project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-02-2130.md
_bmad-output/implementation-artifacts/: 1-1-initialize-project-structure-development-environment.md  1-2-implement-core-schema-with-temporal-pattern.md  1-3-implement-metric-storage-schema.md  1-4-implement-configuration-enrichment-schema.md  1-5-implement-orchestration-schema.md  1-6-implement-active-record-views-indexing.md  (+70 more)
artifact/: dqs-brainstorm.md
db/: init_schema.sql  test_schema.sh
docs/: api-contracts.md  architecture-dqs-dashboard.md  architecture-dqs-orchestrator.md  architecture-dqs-serve.md  architecture-dqs-spark.md  data-models.md  development-guide.md  index.md  integration-architecture.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md
dqs-dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
dqs-orchestrator/: main.py  pyproject.toml
dqs-orchestrator/config/: orchestrator.yaml  parent_paths.yaml
dqs-orchestrator/src/orchestrator/: __init__.py  cli.py  db.py  email.py  models.py  runner.py
dqs-orchestrator/tests/: test_cli.py  test_db.py  test_email.py  test_runner.py
dqs-serve/: Dockerfile  conftest.py  main.py  pyproject.toml
dqs-serve/config/: serve.yaml
dqs-serve/src/serve/: __init__.py  dependencies.py  main.py
dqs-serve/src/serve/db/: __init__.py  engine.py  models.py  session.py  views.py
dqs-serve/src/serve/mcp/: __init__.py  tools.py
dqs-serve/src/serve/routes/: datasets.py  executive.py  lobs.py  search.py  summary.py
dqs-serve/src/serve/schema/: ddl.sql  fixtures.sql  views.sql
dqs-serve/src/serve/services/: reference_data.py
dqs-serve/tests/: conftest.py
dqs-serve/tests/test_mcp/: test_tools.py
dqs-serve/tests/test_routes/: test_datasets.py  test_executive.py  test_lobs.py  test_search.py  test_summary.py
dqs-serve/tests/test_schema/: test_config_enrichment_schema.py  test_dq_run_schema.py  test_fixtures.py  test_metric_schema.py  test_orchestration_schema.py  test_views_indexes.py
dqs-serve/tests/test_services/: test_reference_data.py
dqs-spark/: pom.xml
serve-api/: requirements.txt
spark-job/: .gitignore  build.sbt  pom.xml
tests/: __init__.py
(+268 files in other folders)
