[project]
name = "data-quality-service"
version = "0.1.0"
description = "Data Quality Service — workspace dev tooling"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pyyaml>=6.0.3",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "spark-job",
    "serve-api",
    "db",
    "_bmad",
    "_bmad-output",
    ".agents",
    ".claude",
    "dqs-dashboard",
    "dqs-spark",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require running services (e.g., docker-compose up)",
]
addopts = "-m 'not integration'"
